change <html> to <!doctype><html> & delete <noembed>

--- a/moemoe.html
+++ b/moemoe.html
@@ -1,5 +1,6 @@
+<!doctype html>
 <html>
-<head><TITLE></TITLE><meta http-equiv="Content-Type" content=text/html; charset=utf-8"></head>
+<head><TITLE></TITLE><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 <FRAMESET border=0 frameSpacing=0 rows=*,100% frameBorder=0 framecolor="#000000">
 <FRAME src="./bgsound.cgi" name="bgm">
 <FRAME src="./Hirame_LE.cgi" name="moe_bbs">
@@ -9,4 +10,4 @@
 </noframes>
 </frameset>
 </html>
-<noembed>
+
